--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
 <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- Font Awesome icons (free version)-->
+<script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+>!-- Google fonts-->
+<link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="css/styles.css" rel="stylesheet" />
 <style>
     p { text-align: justify; text-justify: inter-character;}
     h1,h2,h3,h4,h5,h6 {font-family: "Oswald"}
@@ -124,6 +131,7 @@
 
         <div class="w3-center w3-white"style="width: 70%; margin:0 auto;text-align: justify; padding-top: 50px;">
           <h1><b>MULTI FACTOR AUTHENTICATION (MFA)</b></h1>
+          <h1 class="text-black mb-4">Multi Factor Authentication</h1>
           <br>
           <h3><b>DI COSA SI TRATTA</b></h3> 
           <p>Il MFA è un metodo di autenticazione che richiede ad un utente di fornire almeno due fattori di verifica per poter accedere a risorse quali posta elettronica e servizi Microsoft aziendali (es. Outlook, Teams)</p>
