--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
    
     ul.a {list-style-type: disc;}
     body { background-color: white;}
-    video { width: 80%; height: auto;position: float; border: 3px solid #FFFFFF;box-sizing:border-box;}
+    video { width: 80%; height: auto;position: float; box-sizing:border-box;}
     #customers { border-collapse: collapse; width: 80%; margin: 0 auto; text-align: center;}
     #customers td, #customers th { border: 1px solid #ddd; padding: 8px;}
     #customers tr:nth-child(even){background-color: #f2f2f2;}
@@ -83,7 +83,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
   
 <!-- START - Header -->
   <header class="w3-container w3-black w3-center w3-padding-48">
-    <h1>RIRI IT INTEGRATION PROJECT</h1>
+    <h1 class="mx-auto my-0 text-uppercase">RIRI IT INTEGRATION PROJECT</h1>
   </header>
 
 <!-- Grid -->
@@ -102,7 +102,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
           <p>Il tuo profilo IT (es. casella mail e strumenti di collaborazione tra i quali Teams e suite Microsoft Office) verrà migrato nell'ecosistema digitale Oerlikon che utilizza degli standard di sicurezza elevati.</p>
           <h3>DOVE</h3>
           <p>L’applicazione Microsoft Authenticator va installata nel tuo dispositivo mobile (smartphone)</p>
-          <h3><b>QUANDO ATTIVARLO</b></h3>
+          <h3>QUANDO ATTIVARLO</h3>
           <p>Qualche giorno prima delle date riportate in tabella sotto e come indicato nelle video guide, ti invitiamo a provvedere al download dell'applicazione dallo store del tuo smartphone. Le tue nuove credenziali Oerlikon (nome utente e password) ti verranno comunicate qualche giorno prima della data di migrazione del tuo account RRII di posta e collaborazione (Teams..).</p>
           <h3>NELLA QUOTIDIANITA'</h3>
           <p>Grazie agli algoritmi di Microsoft che riconoscono il tuo comportamento (es. accessi dalla stessa località geografica), la frequenza di richiesta dell’approvazione a due fattori sarà molto bassa.</p>
