--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
 </style>
 
 </head>
-<body class="w3-white">
+<body class="w3-black">
 
 <!-- START - Navigation bar with icons -->
-<div class="w3-bar w3-white w3-hide-small">
+<div class="w3-bar w3-black w3-hide-small">
  <a href="#" class="w3-bar-item ">
     <div class="center-img" >
         <img src="images/riri_header.png"  style="max-width:90%; padding:20px">
