--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
 <!-- Grid -->
 <div class="w3-content" style="max-width:1600px; width: 100% ">
     
-      <div class="w3-center w3-white"style="width: 70%; margin:0 auto;text-align: justify; padding-top: 50px;">
+      <div class="w3-center w3-black"style="width: 70%; margin:0 auto;text-align: justify; padding-top: 50px;">
           <h1>Multifactor Authentication(MFA)</h1>
           <br>
           <h3>DI COSA SI TRATTA</h3> 
@@ -109,19 +109,19 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
         </div>
 
           <!-- START - VIDEO GUIDES -->
-              <div class="w3-container w3-center w3-white">
+              <div class="w3-container w3-center w3-black">
                 <!-- Blog entry -->
-                <div class="w3-container w3-white w3-margin w3-padding-large">
+                <div class="w3-container w3-black w3-margin w3-padding-large">
                   <div class="w3-center w3-padding-large">
                     <div class="w3-xxxlarge">
-                      <h2><b>SETUP MFA PER DISPOSITIVI ANDROID</b></h2>
+                      <h2>SETUP MFA PER DISPOSITIVI ANDROID</h2>
                     </div>
                         <video width=100%; height=auto; controls>
                             <source src="video/mfa_android.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                           </video> 
                     <div class="w3-xxxlarge w3-padding-large">
-                       <h2><b>SETUP MFA PER DISPOSITIVI APPLE</b></h2>
+                       <h2>SETUP MFA PER DISPOSITIVI APPLE</h2>
                     </div>
                         <video width=100%; height=auto; controls>
                           <source src="video/mfa_ios.mp4" type="video/mp4">
@@ -132,7 +132,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
               </div> 
 
           <div class="w3-center w3-white">
-            <h2><b>PIANO DI MIGRAZIONE IN OERLIKON DEGLI ACCOUNT M365 RIRI</b></h2>
+            <h2>PIANO DI MIGRAZIONE IN OERLIKON DEGLI ACCOUNT M365 RIRI</h2>
             <br>
           
             <table id="customers" style="  margin: 0 auto;">
