--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
 <div class="w3-content" style="max-width:1600px; width: 100% ">
     
       <div class="w3-center w3-black"style="width: 70%; margin:0 auto;text-align: justify; padding-top: 50px;">
-          <h1>Multifactor Authentication(MFA)</h1>
+          <h1 class="text-white-50 mb-4">Multifactor Authentication - MFA)</h1>
           <br>
-          <h3>DI COSA SI TRATTA</h3> 
+          <h4 class="text-white-50">DI COSA SI TRATTA</h4> 
           <p>Il MFA è un metodo di autenticazione che richiede ad un utente di fornire almeno due fattori di verifica per poter accedere a risorse quali posta elettronica e servizi Microsoft aziendali (es. Outlook, Teams)</p>
-          <h3>COME FUZIONA</h3> 
+          <h4 text-white-50>COME FUZIONA</h3> 
           <p>Nel caso si verifichi un tentativo di accesso al tuo nuovo ambiente di lavoro digitale Oerlikon ritenuto anomalo, poiché proveniente da un paese a rischio, o dalle caratteristiche diverse dall’utilizzo abituale, verrà notificato sul tuo dispositivo mobile (smartphone) il tentativo di accesso e richiesta l'approvazione della tua identità. Ricordiamo che questo è uno strumento di salvaguardia della tua identità. Grazie all’applicazione mobile Microsoft Authenticator potrai quindi gestire e confermare l'accesso alle tue applicazioni Microsoft mediante uno smartphone.</p>
-          <h3>COME ATTIVARLO</h3> 
+          <h4 text-white-50>COME ATTIVARLO</h3> 
           <p>La configurazione è molto semplice e può essere effettuata in autonomia senza il supporto IT seguendo le video guida Android o Apple che trovi riportate in calce.</p>
-          <h3>PERCHE'</h3>
+          <h4 text-white-50>PERCHE'</h3>
           <p>Il tuo profilo IT (es. casella mail e strumenti di collaborazione tra i quali Teams e suite Microsoft Office) verrà migrato nell'ecosistema digitale Oerlikon che utilizza degli standard di sicurezza elevati.</p>
-          <h3>DOVE</h3>
+          <h4 text-white-50>DOVE</h3>
           <p>L’applicazione Microsoft Authenticator va installata nel tuo dispositivo mobile (smartphone)</p>
-          <h3>QUANDO ATTIVARLO</h3>
+          <h4 text-white-50>QUANDO ATTIVARLO</h3>
           <p>Qualche giorno prima delle date riportate in tabella sotto e come indicato nelle video guide, ti invitiamo a provvedere al download dell'applicazione dallo store del tuo smartphone. Le tue nuove credenziali Oerlikon (nome utente e password) ti verranno comunicate qualche giorno prima della data di migrazione del tuo account RRII di posta e collaborazione (Teams..).</p>
-          <h3>NELLA QUOTIDIANITA'</h3>
+          <h4 text-white-50>NELLA QUOTIDIANITA'</h3>
           <p>Grazie agli algoritmi di Microsoft che riconoscono il tuo comportamento (es. accessi dalla stessa località geografica), la frequenza di richiesta dell’approvazione a due fattori sarà molto bassa.</p>
         </div>
 
