--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
                 <!-- Blog entry -->
                 <div class="w3-container w3-black w3-margin w3-padding-large">
                   <div class="w3-center w3-padding-large">
-                    <div class="w3-xxxlarge">
+                    <div class="w3-padding-large">
                       <h2>SETUP MFA PER DISPOSITIVI ANDROID</h2>
                     </div>
                         <video width=100%; height=auto; controls>
                             <source src="video/mfa_android.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                           </video> 
-                    <div class="w3-xxxlarge w3-padding-large">
+                    <div class="w3-padding-large">
                        <h2>SETUP MFA PER DISPOSITIVI APPLE</h2>
                     </div>
                         <video width=100%; height=auto; controls>
