--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
 <div class="w3-content" style="max-width:1600px; width: 100% ">
     
       <div class="w3-center w3-black"style="width: 70%; margin:0 auto;text-align: justify; padding-top: 50px;">
-          <h1 class="text-white-50 mb-4">Multifactor Authentication - MFA)</h1>
+          <h1 class="text-white-50 mb-4">Multifactor Authentication - MFA </h1>
           <br>
           <h4 class="text-white-50">DI COSA SI TRATTA</h4> 
           <p>Il MFA è un metodo di autenticazione che richiede ad un utente di fornire almeno due fattori di verifica per poter accedere a risorse quali posta elettronica e servizi Microsoft aziendali (es. Outlook, Teams)</p>
