--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
           <br>
           <h4 class="text-white-50">DI COSA SI TRATTA</h4> 
           <p>Il MFA è un metodo di autenticazione che richiede ad un utente di fornire almeno due fattori di verifica per poter accedere a risorse quali posta elettronica e servizi Microsoft aziendali (es. Outlook, Teams)</p>
-          <h4 text-white-50>COME FUZIONA</h4> 
+          <h4 class="text-white-50">COME FUZIONA</h4> 
           <p>Nel caso si verifichi un tentativo di accesso al tuo nuovo ambiente di lavoro digitale Oerlikon ritenuto anomalo, poiché proveniente da un paese a rischio, o dalle caratteristiche diverse dall’utilizzo abituale, verrà notificato sul tuo dispositivo mobile (smartphone) il tentativo di accesso e richiesta l'approvazione della tua identità. Ricordiamo che questo è uno strumento di salvaguardia della tua identità. Grazie all’applicazione mobile Microsoft Authenticator potrai quindi gestire e confermare l'accesso alle tue applicazioni Microsoft mediante uno smartphone.</p>
-          <h4 text-white-50>COME ATTIVARLO</h4> 
+          <h4 class="text-white-50">COME ATTIVARLO</h4> 
           <p>La configurazione è molto semplice e può essere effettuata in autonomia senza il supporto IT seguendo le video guida Android o Apple che trovi riportate in calce.</p>
-          <h4 text-white-50>PERCHE'</h4>
+          <h4 class="text-white-50">PERCHE'</h4>
           <p>Il tuo profilo IT (es. casella mail e strumenti di collaborazione tra i quali Teams e suite Microsoft Office) verrà migrato nell'ecosistema digitale Oerlikon che utilizza degli standard di sicurezza elevati.</p>
-          <h4 text-white-50>DOVE</h4>
+          <h4 class="text-white-50">DOVE</h4>
           <p>L’applicazione Microsoft Authenticator va installata nel tuo dispositivo mobile (smartphone)</p>
-          <h4 text-white-50>QUANDO ATTIVARLO</h4>
+          <h4 class="text-white-50">QUANDO ATTIVARLO</h4>
           <p>Qualche giorno prima delle date riportate in tabella sotto e come indicato nelle video guide, ti invitiamo a provvedere al download dell'applicazione dallo store del tuo smartphone. Le tue nuove credenziali Oerlikon (nome utente e password) ti verranno comunicate qualche giorno prima della data di migrazione del tuo account RRII di posta e collaborazione (Teams..).</p>
-          <h4 text-white-50>NELLA QUOTIDIANITA'</h4>
+          <h4 class="text-white-50">NELLA QUOTIDIANITA'</h4>
           <p>Grazie agli algoritmi di Microsoft che riconoscono il tuo comportamento (es. accessi dalla stessa località geografica), la frequenza di richiesta dell’approvazione a due fattori sarà molto bassa.</p>
         </div>
 
