--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
   
 <!-- START - Header -->
   <header class="w3-container w3-black w3-center w3-padding-48">
-    <h1 class="mx-auto my-0 text-uppercase">RIRI IT INTEGRATION PROJECT</h1>
+    <h1 class="mx-auto my-0 text-uppercase text-white-50">RIRI IT INTEGRATION PROJECT</h1>
   </header>
 
 <!-- Grid -->
 <div class="w3-content" style="max-width:1600px; width: 100% ">
     
       <div class="w3-center w3-black"style="width: 70%; margin:0 auto;text-align: justify; padding-top: 50px;">
-          <h1 class="text-white-50 mb-4">Multifactor Authentication - MFA </h1>
+          <h1 class="mb-4">Multifactor Authentication - MFA </h1>
           <br>
           <h4 class="text-white-50">DI COSA SI TRATTA</h4> 
           <p>Il MFA è un metodo di autenticazione che richiede ad un utente di fornire almeno due fattori di verifica per poter accedere a risorse quali posta elettronica e servizi Microsoft aziendali (es. Outlook, Teams)</p>
@@ -114,14 +114,14 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
                 <div class="w3-container w3-black w3-margin w3-padding-large">
                   <div class="w3-center w3-padding-large">
                     <div class="w3-padding-large">
-                      <h2>SETUP MFA PER DISPOSITIVI ANDROID</h2>
+                      <h3>SETUP MFA PER DISPOSITIVI ANDROID</h3>
                     </div>
                         <video width=100%; height=auto; controls>
                             <source src="video/mfa_android.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                           </video> 
                     <div class="w3-padding-large">
-                       <h2>SETUP MFA PER DISPOSITIVI APPLE</h2>
+                       <h3>SETUP MFA PER DISPOSITIVI APPLE</h3>
                     </div>
                         <video width=100%; height=auto; controls>
                           <source src="video/mfa_ios.mp4" type="video/mp4">
@@ -140,15 +140,15 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
                 <th>Sito</th>
                 <th>Data migrazione</th>
                  </tr>
-              <tr>
-                <td>AMOM</td>
+              <tr class="text-white-50">
+                <td >AMOM</td>
                 <td>20-21 Novembre 2023</td>          
               </tr>
               <tr>
                 <td>DMC</td>
                 <td>22-23 Novembre 2023</td>             
               </tr>
-              <tr>
+              <tr class="text-white-50">
                 <td>SPM Palazzolo</td>
                 <td>27-28 Novembre 2023</td>              
               </tr>
@@ -156,7 +156,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
                 <td>Cobrax Padova</td>
                 <td>29-30 Novembre 2023</td>               
               </tr>
-              <tr>
+              <tr class="text-white-50">
                 <td>Tirano</td>
                 <td>29-30 Novembre 2023</td>
               </tr>
