--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
                 <div class="w3-container w3-black w3-margin w3-padding-large">
                   <div class="w3-center w3-padding-large">
                     <div class="w3-padding-large">
-                      <h3>SETUP MFA PER DISPOSITIVI ANDROID</h3>
+                      <h2 class="text-white mb-4">Setup per dispositivi Android</h2>
                     </div>
                         <video width=100%; height=auto; controls>
                             <source src="video/mfa_android.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                           </video> 
                     <div class="w3-padding-large">
-                       <h3>SETUP MFA PER DISPOSITIVI APPLE</h3>
+                       <h3>Setup per dispositivi Apple</h3>
                     </div>
                         <video width=100%; height=auto; controls>
                           <source src="video/mfa_ios.mp4" type="video/mp4">
@@ -140,7 +140,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
                 <th>Sito</th>
                 <th>Data migrazione</th>
                  </tr>
-              <tr class="text-white-50">
+             <tr class="text-black">
                 <td >AMOM</td>
                 <td>20-21 Novembre 2023</td>          
               </tr>
@@ -148,7 +148,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
                 <td>DMC</td>
                 <td>22-23 Novembre 2023</td>             
               </tr>
-              <tr class="text-white-50">
+              <tr class="text-black">
                 <td>SPM Palazzolo</td>
                 <td>27-28 Novembre 2023</td>              
               </tr>
@@ -156,7 +156,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
                 <td>Cobrax Padova</td>
                 <td>29-30 Novembre 2023</td>               
               </tr>
-              <tr class="text-white-50">
+              <tr class="text-black">
                 <td>Tirano</td>
                 <td>29-30 Novembre 2023</td>
               </tr>
