--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
                 </div>
               </div> 
 
-          <div class="w3-center w3-white">
-            <h2>PIANO DI MIGRAZIONE IN OERLIKON DEGLI ACCOUNT M365 RIRI</h2>
+          <div class="w3-center w3-black">
+            <h2 class="text-white mb-4">Piano di migrazione in Oerlikon degli account M365 Riri</h2>
             <br>
           
             <table id="customers" style="  margin: 0 auto;">
