--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
 <!-- END - Navigation bar with icons -->
   
 <!-- START - Header -->
-  <header class="w3-container w3-black w3-center w3-padding-48">
+  <header class="class="masthead w3-container w3-black w3-center w3-padding-48">
     <h1 class="mx-auto my-0 text-uppercase text-white-50">RIRI IT INTEGRATION PROJECT</h1>
   </header>
 
