--- a/index.html
+++ b/index.html
@@ -109,27 +109,53 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
         </div>
 
           <!-- START - VIDEO GUIDES -->
-              <div class="w3-container w3-center w3-black">
-                <!-- Blog entry -->
-                <div class="w3-container w3-black w3-margin w3-padding-large">
-                  <div class="w3-center w3-padding-large">
-                    <div class="w3-padding-large">
-                      <h3 class="text-white mb-4">Setup per dispositivi Android</h3>
-                    </div>
-                        <video width=100%; height=auto; controls>
-                            <source src="video/mfa_android.mp4" type="video/mp4">
+
+
+          <!-- Video-->
+          <section class="projects-section bg-black" id="video">
+            <div class="container px-4 px-lg-5">
+
+                <!-- Android -->
+                <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
+                    <div class="col-xl-8 col-lg-7"><video width=100%; height=auto; controls>
+                            <source src="video/android.mp4" type="video/mp4">
                             Your browser does not support the video tag.
-                          </video> 
-                    <div class="w3-padding-large">
-                       <h3>Setup per dispositivi Apple</h3>
+                          </video> </div>
+                    <div class="col-xl-4 col-lg-5">
+                        <div class="featured-text text-center text-lg-left">
+                            <h1 class="text-white">Android</h1>
+                            <p class="text-white-50 mb-0">Installazione dell'applicazione su dispositivi Android.</p>
+                        </div>
                     </div>
-                        <video width=100%; height=auto; controls>
-                          <source src="video/mfa_ios.mp4" type="video/mp4">
-                                Your browser does not support the video tag.
-                          </video>
-                  </div>
                 </div>
-              </div> 
+
+              
+
+
+                 </div>
+            </section>
+
+            <section class="projects-section bg-dark" id="video_apple">
+                        <div class="container px-4 px-lg-5">
+
+              <!-- Apple -->
+                            <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
+                                <div class="col-xl-8 col-lg-7"><video width=100%; height=auto; controls>
+                                        <source src="video/apple.mp4" type="video/mp4">
+                                        Your browser does not support the video tag.
+                                      </video> </div>
+                                <div class="col-xl-4 col-lg-5">
+                                    <div class="featured-text text-center text-lg-left">
+                                        <h1 class="text-white">Apple</h1>
+                                        <p class="text-white-50 mb-0">Installazione dell'applicazione su dispositivi iOS</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                 </div>
+            </section>
+
+                    
 
           <div class="w3-center w3-black">
             <h3 class="text-white mb-4">Piano di migrazione in Oerlikon degli account M365 Riri</h3>
