--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
     <h1 class="mx-auto my-0 text-uppercase text-white-50">RIRI IT INTEGRATION PROJECT</h1>
   </header>
 
-<!-- Grid -->
-<div class="w3-content" style="max-width:1600px; width: 100% ">
+<!-- Grid 
+<div class="w3-content" style="max-width:1600px; width: 100% ">-->
 <section class="projects-section bg-black" id="video">
   <div class="container px-4 px-lg-5">    
       <div class="w3-center w3-black"style="width: 70%; margin:0 auto;text-align: justify; padding-top: 50px;">
