--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
                           <div class="col-xl-4 col-lg-5">
                                 <div class="featured-text text-center text-lg-left">
                                           <h1 class="text-white">Android</h1>
-                                          <p class="text-white-50 mb-0">Installazione dell'applicazione su dispositivi Android.</p>
+                                          <p class="text-white-50 mb-0" style="text-align: center;">Installazione dell'applicazione su dispositivi Android.</p>
                                 </div>
                           </div>
                       </div>
@@ -148,7 +148,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
                             <div class="col-xl-4 col-lg-5">
                                 <div class="featured-text text-center text-lg-left">
                                     <h1 class="text-white">Apple</h1>
-                                    <p class="text-white-50 mb-0">Installazione dell'applicazione su dispositivi iOS</p>
+                                    <p class="text-white-50 mb-0" style="text-align: center;">Installazione dell'applicazione su dispositivi iOS</p>
                                 </div>
                             </div>
                       </div>
