--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
 <div class="w3-content" style="max-width:1600px; width: 100% ">-->
 <section class="projects-section bg-black" id="video">
   <div class="container px-4 px-lg-5">    
-      <div class="w3-center w3-black"style="width: 70%; margin:0 auto;text-align: justify; padding-top: 50px;">
+      <div class="w3-black"style="width: 100%; margin:0 auto;text-align: justify; padding-top: 50px;">
           <h2 class="text-white mb-4">Multifactor Authentication - MFA </h2>
           <br>
           <h4 class="text-white-50">DI COSA SI TRATTA</h4> 
