--- a/index.html
+++ b/index.html
@@ -81,10 +81,23 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
 </div>
 <!-- END - Navigation bar with icons -->
   
-<!-- START - Header -->
+<!-- START - Header 
   <header class=" gc w3-container w3-black w3-center w3-padding-48">
     <h1 class="mx-auto my-0 text-uppercase text-white-50">RIRI IT INTEGRATION PROJECT</h1>
-  </header>
+  </header>-->
+
+ <header class="gc">
+            <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
+                <div class="d-flex justify-content-center">
+                    <div class="text-center">
+                        <h1 class="mx-auto my-0 text-uppercase">IT Integration</h1>
+                        <h2 class="text-white-50 mx-auto mt-2 mb-5">Il progetto di integrazione dell'infrastruttura IT di Riri in Oerlikon</h2>
+                        <a class="btn btn-primary" href="#iniziamo">INIZIAMO</a>
+                    </div>
+                </div>
+            </div>
+        </header>
+
 
 <!-- Grid 
 <div class="w3-content" style="max-width:1600px; width: 100% ">-->
