--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
     <h1 class="mx-auto my-0 text-uppercase text-white-50">RIRI IT INTEGRATION PROJECT</h1>
   </header>-->
 
- <header class="gc">
+ <header class="masthead">
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
@@ -96,7 +96,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
                     </div>
                 </div>
             </div>
-        </header>
+</header>
 
 
 <!-- Grid 
