--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
            
               <footer class=" w3-black" style="padding-top:50px">
                 <a href="https://www.oerlikon.com/" 
-                 style="text-decoration: none; margin: 0 auto;" class=" w3-center"><h5>Copyright 2023 - OERLIKON #OneIT<h5></a>
+                 style="text-decoration: none; margin: 0 auto;" class=" w3-center">Copyright 2023 - OERLIKON #OneIT</a>
                 <!--<a href="#" class="w3-button w3-white w3-padding-large w3-margin-bottom"><i class="fa fa-arrow-up w3-margin-right"></i>TO THE TOP</a>-->
               </footer>
             
