--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ body {font-family: "Varela Round"; font-size: 18px; line-height: 1.3}
     <div class="container px-4 px-lg-5">
             <!-- Footer -->
            
-              <footer class=" w3-black" style="padding-top:50px">
+              <footer class=" w3-black text-center" style="padding-top:50px">
                 <a href="https://www.oerlikon.com/" 
                  style="text-decoration: none; margin: 0 auto;" class=" w3-center">Copyright 2023 - OERLIKON #OneIT</a>
                 <!--<a href="#" class="w3-button w3-white w3-padding-large w3-margin-bottom"><i class="fa fa-arrow-up w3-margin-right"></i>TO THE TOP</a>-->
